bynkc/tests/fixtures/positive/302_query_annotated_let/src/probe.bynk
context probe

type Reservation = {
  id: String,
  qty: Int,
}

agent Inventory {
  key sku: String

  store reservations: Map[String, Reservation]

  on call pending() -> Effect[List[Reservation]] {
    let q: Query[Reservation] = reservations.filter((r) => r.qty > 0)
    q.collect()
  }
}
