bynkc/tests/fixtures/negative/256_ws_open_requires_by/src/s.bynk
context s
type ServerFrame = { text: String }
type ClientFrame = { text: String }
service Gw from websocket(in: ClientFrame, out: ServerFrame) {
  on open () -> Effect[()] {
    let _ <- connection.close()
    ()
  }
}
